# InfiniteInputs

./: .clang-format  .gitignore  CMakeLists.txt  README.md  about.md  build-android.ps1  changelog.md  mod.json  support.md
nogh-workflow-for-now.github/workflows/: multi-platform.yml
src/: InputTriggerPopup.cpp  InputTriggerPopup.hpp  LevelKeys.cpp  LevelKeys.hpp  LogVar.hpp  TextParsing.cpp  TextParsing.hpp  main.cpp  windows.cpp
src/hooks/: EditorUI.cpp  EditorUI.hpp  GJBaseGameLayer.cpp  GJBaseGameLayer.hpp  TextGameObject.cpp  TextGameObject.hpp
